# VoiceAgentAI

./: .gitignore  CONTIBUTING.MD  LICENSE  README.md  pyproject.toml  requirements.txt
voiceagentarnab/: __init__.py  agent.py  main.py
voiceagentarnab/audio/: stt.py  tts.py
voiceagentarnab/llm/: chat.py
voiceagentarnab/memory/: stm.py
